--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
+    "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
