--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "normalize.css": "^8.0.1",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
