--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
