--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VUE_APP_BASE_URL_API = https://www.thecocktaildb.com/api/json/v2/9973533
+VUE_APP_BASE_URL_API = https://www.thecocktaildb.com/api/json/v1
