hide email address test

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,4 +1,2 @@
 DB_CONNECT = mongodb+srv://(USERNAME):(PASSWORD).fkdrx.mongodb.net/mixCocktailDB?retryWrites=true&w=majority
-EMAIL = 2d9396e1f6-cd38f8@inbox.mailtrap.io
-USER = 509eab78e4ed4e
-PASS = 64e6209c1d2906
+EMAIL = votreEmail@test.fr
